--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.6",
     "firebase": "^9.16.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
