--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
+    "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
