--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "both": "vite build && vite preview"
   },
   "dependencies": {
     "axios": "^1.2.6",
